Login and Registartion page added

--- a/AbcoItAccountingApplication/AbcoItAccountingApplication/AbcoItAccountingApplication.csproj
+++ b/AbcoItAccountingApplication/AbcoItAccountingApplication/AbcoItAccountingApplication.csproj
@@ -79,6 +79,7 @@
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\ionicons.min.css" />
+    <Content Include="Content\login.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -1031,6 +1032,8 @@
     <Content Include="Scripts\jquery-ui-1.11.4.js" />
     <Content Include="Scripts\jquery-ui-1.11.4.min.js" />
     <Content Include="Ui\AdminUi.aspx" />
+    <Content Include="Ui\Index.aspx" />
+    <Content Include="Ui\Registration.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -1048,6 +1051,20 @@
     </Compile>
     <Compile Include="Ui\AdminUi.aspx.designer.cs">
       <DependentUpon>AdminUi.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Ui\Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Ui\Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Ui\Registration.aspx.cs">
+      <DependentUpon>Registration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Ui\Registration.aspx.designer.cs">
+      <DependentUpon>Registration.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
